--- a/nginx/conf.d/example.com.conf
+++ b/nginx/conf.d/example.com.conf
@@ -21,6 +21,8 @@ server {
         proxy_redirect     off;
         proxy_set_header   X-Real-IP $remote_addr;
 
+        resolver 127.0.0.11 ipv6=off;  # Using docker emedded dns resolver.
+
         proxy_pass http://flask_api:5000$uri;
     }
 }
